fix: remove info image text-align

--- a/titangene/styles.css
+++ b/titangene/styles.css
@@ -97,9 +97,6 @@ main .container {
 .info h3 {
   margin-bottom: 4px;
 }
-.info-img {
-  text-align: right;
-}
 .action {
   width: 230px;
   text-align: center;
